--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!---------------------------------------------------------------------------navbar*-->
 
 
-    <header>
+       <header>
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
@@ -856,16 +856,45 @@
     </div>
 </section>
 <!---------------------------------------------------------------------------section[fiveteen]*-->
+<section class="fiveteen">
+    <div class="warpper">
+        <div class="item_scroll">
+          <img src="images/item1.png" alt="item1">
+        </div>
+        <div class="item_scroll">
+          <img src="images/item2.png" alt="item1">
+        </div>
+        <div class="item_scroll">
+          <img src="images/item3.png" alt="item1">
+        </div>
+        <div class="item_scroll">
+          <img src="images/item4.png" alt="item1">
+        </div>
+        <div class="item_scroll">
+          <img src="images/item5.png" alt="item1">
+        </div>
+        <div class="item_scroll">
+          <img src="images/item6.png" alt="item1">
+        </div>
+        <div class="item_scroll">
+          <img src="images/item7.png" alt="item1">
+        </div>
+        <div class="item_scroll">
+          <img src="images/item8.png" alt="item1">
+        </div>
+      </div>
+</section>
+
 <!---------------------------------------------------------------------------section[sixteen]*-->
 <section  class="sixteen">
-    <div class="container" class="cardscroll-s16">
+    <div class="container cardscroll-s16">
         <div class="header12-s16">
             <h5 class="hline1-s16">WHAT PEOPLE SAY</h5>
             <h5 class="hline2-s16">CLIENTS WORDS</h5>
             <hr style="margin: auto; width: 100px; color:#ff214f; height: 10%;">
         </div>    
-
-        <div class="row  d-flex" class="wrapper-s16">
+  
+        <div class="wrapper-s16">
             <div class="col">
                 <div class="card-s16">
                     <img src="images/avtar13.jpg" alt="Avatar" id="personimg-s16" >
@@ -917,29 +946,28 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="col">
-                <div class="card">
-                    <img src="images/avtar13.jpg" alt="Avatar" id="personimg" >
-                    <div class="container12">
-                        <p>I wanted to hire the best and after looking 
-                            at several other companies,
-                             I knew Jacob was the perfect guy 
-                             for the job. He is a true professional.</p> 
-                    </div>
-                    <div class="text1container12">
-                        <h4><b>John Doe</b></h4>
-                    </div>
-                    <div class="text2container12">    
-                        <h4>John Doe</h4>
-                    </div>
-                </div>
-            </div> -->
-</section>
-
+            <div class="col">
+              <div class="card-s16">
+                  <img src="images/avtar15.jpg" alt="Avatar" id="personimg-s16" >
+                  <div class="container12-s16">
+                      <p>I wanted to hire the best and after looking 
+                          at several other companies,
+                           I knew Jacob was the perfect guy 
+                           for the job. He is a true professional.</p> 
+                  </div>
+                  <div class="text1container12-s16">
+                      <h4><b>John Doe</b></h4>
+                  </div>
+                  <div class="text2container12-s16">    
+                      <h4>John Doe</h4>
+                  </div>
+              </div>
+          </div>
+        </div>
+      </div>
+            
+  </section>
 <!---------------------------------------------------------------------------section[saventeen]*-->
-<section class="eightteen"></section>
-
-<!---------------------------------------------------------------------------section[eightteen]*-->
 <section class="saventeen">
     <div class="txth-s17">
         <h4 id="h4-1s17">PUBLISH WHAT YOU THINK</h4>
@@ -1005,8 +1033,8 @@
     </div>
 </section>
 
-<!---------------------------------------------------------------------------section[nineteen]*-->
-<footer class="nineteen">
+<!---------------------------------------------------------------------------section[eighteen]*-->
+<footer class="eighteen">
     <div class="footer1-s19">
         <div class="row">
             <div class="col"><h5 id="txtf1h-s19">London based highly creative studio</h5></div>
